package com.tentacle.callofwild.protocol;


//指令类型
enum eCommand {
    NOP                         = 0;    //no operation
    HEARTBEAT                   = 3;    //心跳

    CHECK_ID                    = 41;   //加入游戏时做身份验证, 请求 CheckIdReq, 应答 CheckIdAns
    JOIN                        = 4;    //加入游戏
    GET_PLAYER_INFO             = 7;    //得到玩家信息
    UPGRADE                     = 8;    //升级
    CHAT                        = 12;   //聊天
    GET_RANK_INFO               = 14;   //排名
    GET_MAILLIST                = 15;   //邮件列表
    SEND_MESSAGE                = 20;   //发信
    ATTACK                      = 21;   //进攻
    FIT_UP                      = 25;   //装备
    STRENGTHEN                  = 26;   //强化
    CREATE_PLAYER               = 34;   //创建玩家, 请求 PlayerCreation, 应答 PlayerCreation
    MARK_AS_READ                = 47;   //标记信息已读
    MAKE_FRIEND                 = 54;   //添加好友
    USE_ITEM                    = 104;  //使用道具, 请求 UseItemReq, 应答 UseItemAns
    GET_SCENARIO_INFO           = 112;  //获取副本信息, 以 CommonReq 请求, 以 ScenarioInfoAns 回答
    CHALLENGE_SCENARIO          = 113;  //挑战副本


    REGISTER                    = 2000;    //注册, 请求 AccountReq, 应答 AccountAns
    LOGIN                       = 2001;    //登录, 请求 AccountReq, 应答 AccountAns
    AUTHENTICATE                = 2002;    //第3方平台登录验证, 请求 Authentication, 应答 Authentication
    LOGOUT                      = 2003;    //退出游戏, 请求 CommonReq, 应答 CommonAns
    GET_VERSION_INFO            = 2004;    //获取版本信息, 请求 VersionInfo, 应答 VersionInfo

    PUSH_MESSAGE                        = 804;  //SEND_MESSAGE目标方接收消息
    PUSH_CHAT_CONTENT                   = 805;  //推送聊天内容
    PUSH_YOU_HAVE_NEW_MAIL              = 814;  //你有新邮件了
    PUSH_BATTLE_REPORT                  = 817;  //战斗报告
    PUSH_SCENARIO_BATTLE_REPORT         = 823;  //副本战斗报告
    PUSH_TRADE_REPORT                   = 819;  //交易报告, 带参数 Information
    PUSH_BROADCAST                      = 822;  //广播游戏内消息


    SYS_RELOAD_CFG              = 1000;     //重新加载配置
    SYS_EXIT                    = 1001;     //退出系统, 以 SysCommonReq 请求
    SYS_IDLE                    = 1002;     //空转, 用于测试
    SYS_POST                    = 1003;     //发布公告
    SYS_QUERY_ONLINERS          = 1004;     //查询在线玩家
    SYS_PRESENT_GIFT            = 1005;     //赠送
    SYS_SEND_MAIL               = 1008;     //发送邮件
    SYS_GET_RELOADABLES         = 1009;     //获取可重加载的配置列表
    SYS_KICK_PLAYER             = 1010;     //踢人
    SYS_SHUT_UP                 = 1011;     //禁言
    SYS_GET_SESSION             = 1012;     //获取session
    SYS_GM_TALK                 = 1013;     //GM发言, for pc chat client
    SYS_REFRESH_SERVER_STATUS   = 1014;     //更新游戏服务器状态到登录服务器
    SYS_UNBLOCK                 = 1016;     //解禁, 参考 SysUnblock
    SYS_RESET_PASSWORD          = 1018;     //密码重置
    SYS_RECHARGE                = 1019;     //充值

}

//错误码
enum eErrorCode {
    OK                                              = 0;
    FAILED                                          = 1;
    NO_IMPLEMENTED                                  = 18;   //还没实现
    INTERNAL_ERROR                                  = 25;   //内部错误
    WHO_ARE_YOU                                     = 19;   //你是谁？
    OBSOLETED_COMMAND                               = 33;   //废弃的命令, 已经用别的命令取代了
    BROKEN_TIMER                                    = 30;   //坏了的表
    TOO_MANY_WORDS                                  = 34;   //话太多
    NOT_ENOUGH_RES                                  = 2;    //资源不够
    NOT_ENOUGH_COPPER                               = 92;   //铜钱不够
    NOT_ENOUGH_GOLD                                 = 93;   //金币不够
    SESSION_KEY_ERR                                 = 6;    //session key错误
    IN_BLACKLIST                                    = 7;    //在黑名单中
    ERR_NAME_OR_PASSWORD                            = 10;   //错误的用户名或密码
    NAME_DUPLICATED                                 = 11;   //名称重复
    NO_THIS_PLAYER                                  = 12;   //不存在这个玩家
    NEED_HIGHER_LEVEL                               = 39;   //级别不够
    NO_INFO_ABOUT_THIS_ITEM                         = 40;   //找不到此物品的配置信息
    YOU_CANNOT_ORDER_ME                             = 44;   //你不能执行此命令
    YOU_DONT_HAVE_PERMISSION                        = 48;   //不让你干这事, (-_-)'
    YOU_DONT_HAVE_SATISFY_ME                        = 49;   //你没能满足我, 用于期望客户端输入的数据有误
    UNKNOWN_SCHEME                                  = 54;   //未知的方案
    CONFIGURE_FILE_CORRUPTED                        = 58;   //配置文件出错
    NO_THIS_ITEM                                    = 62;   //没有此道具
    TOO_MANY_GHOST_PROFILE                          = 82;   //小号太多了
    SHUT_UP                                         = 84;   //闭嘴
    FUCK_OFF                                        = 85;   //滚蛋



}

//变体类型, 用于动态参数
message MyVariant {
    optional string name            = 1;    //参数名
    optional string val_type        = 2;    //值的类型, i4,i8,b,str,f,d, i4_seq, i8_seq, ...

    optional int32 val_i4           = 3;    //整形值
    optional int64 val_i8           = 4;    //长整形值
    optional bool val_b             = 5;    //布尔值
    optional string val_str         = 6;    //串值
    optional double val_f           = 7;    //浮点值
    optional double val_d           = 8;    //双精浮点值

    repeated int32 val_i4_seq       = 9;    //整形值序列
    repeated int64 val_i8_seq       = 10;   //长整形值序列
    repeated bool val_b_seq         = 11;   //布尔值序列
    repeated string val_str_seq     = 12;   //串值序列
    repeated double val_f_seq       = 13;   //浮点值序列
    repeated double val_d_seq       = 14;   //双精浮点值序列
}

//玩家指令
message Instruction {
    optional eCommand cmd           = 1;    //指令类型
    optional int64 id               = 2;
}

//普通的不带参数的请求
message CommonReq {
    optional Instruction cmd        = 1;    //命令
}

//一般的消息响应包
message CommonAns {
    optional Instruction cmd        = 1;
    optional eErrorCode err_code    = 2;    //错误码
}








//资源类型
enum eResType
{
    RT_UNKNOWN    = 0;  //无效值
    COPPER        = 1;  //铜币
    GOLD          = 6;  //RMB
}

//资源数量
message ResAmount {
	optional eResType type        = 1;  //资源类型
	optional int32 amount         = 2;  //数量
}

